--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@mui/material": "^5.15.3",
     "@mui/system": "^5.15.3",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "chart.js": "^3.7.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
